Se llena el form con datos de tabla y se cierra y limpia form  con modal

--- a/src/components/administrador/administrador.component.html
+++ b/src/components/administrador/administrador.component.html
@@ -4,7 +4,13 @@
       <h2 class="container__admin-institutos--title">Gestión de Institutos</h2>
     </div>
     <div class="row d-flex justify-content-end mb-3">
-      <button class="btn container__admin-institutos--btn">+ Agregar</button>
+      <button
+        data-bs-toggle="modal"
+        data-bs-target="#editCreateModal"
+        class="btn container__admin-institutos--btn"
+      >
+        + Agregar
+      </button>
     </div>
 
     <app-table />
