--- a/src/components/form/form.component.scss
+++ b/src/components/form/form.component.scss
@@ -3,13 +3,13 @@
 %btn-base {
   background-color: $color-pink-dark;
   color: white;
-  height: 4.5rem;
+  height: 4rem;
   font-weight: bold;
   font-size: medium;
   transition: transform 0.2s ease;
 }
 
-.container__form{
+.container__form {
   margin-top: 5rem;
   margin-left: 3rem;
   margin-right: 3rem;
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     padding: 2rem;
-      &:has(span) {
+    &:has(span) {
       font-weight: bold;
     }
   }
@@ -53,7 +53,7 @@
   &--radio-option {
     padding: 0 1rem;
   }
-  &--radio-option input[type='radio'] {
+  &--radio-option input[type="radio"] {
     accent-color: $color-pink-dark;
   }
   &--btn {
@@ -85,6 +85,7 @@
     color: $color-darker-grey;
     height: 4rem;
     width: 16rem;
+    margin: 1rem 3rem;
     font-weight: bold;
     font-size: medium;
     transition: transform 0.2s ease;
