--- a/src/components/table/table.component.scss
+++ b/src/components/table/table.component.scss
@@ -202,6 +202,14 @@
   height: 4rem;
 }
 
+.modal {
+  --bs-modal-width: 75rem;
+}
+
+:host ::ng-deep .container__form {
+  margin-top: 0 !important;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
   .table-card {
